src/snapshots/kbnf_syntax__grammar__test__indirect_right_recursive_grammar.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: start(ID: 1)
B ::= 'y'(ID: 0) A(ID: 2) | 'y'(ID: 0);
start ::= A(ID: 2) '
'(ID: 1);
A ::= 'x'(ID: 2) B(ID: 0) | 'x'(ID: 2);
