src/snapshots/kbnf_syntax__grammar__test__regex_complement.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: filter(ID: 0)
filter ::= #ex"[a-z]+"(ID: 0,type: DFA);
