src/snapshots/kbnf_syntax__grammar__test__simplify_grammar2.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 0)
S ::= #"cdcda|cda|cdcdcdcda|cdcdcdcdcda|cdcdcdcdcdcda|cdcdcda"(ID: 0,type: DFA);
