src/snapshots/kbnf_syntax__grammar__test__simplify_grammar3.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 0)
S ::= #"bc|e|de|ac|b|bcde|abde|cde|ce|acd|abce|be|abd|abcde|ae|d|bde|ab|a|cd|bce|abcd|bd|abc|ad|ade|c|ace|acde|bcd|abe"(ID: 0,type: DFA);
