src/snapshots/kbnf_syntax__grammar__test__simplify_grammar5.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 1)
A ::= A(ID: 0) 'c'(ID: 0) | #"Ac|cd"(ID: 0,type: DFA);
S ::= 'jk'(ID: 1) A(ID: 0) | 'ab'(ID: 2) S(ID: 1) | 'ab'(ID: 2);
