src/snapshots/kbnf_syntax__grammar__test__simplify_grammar6.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 0)
S ::= 'cd'(ID: 0) #e"\A(?:cd)\z"(ID: 0,type: DFA);
