src/snapshots/kbnf_syntax__grammar__test__simplify_grammar9.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 0)
S ::= #"b|d|a|c"(ID: 0,type: DFA);
