src/snapshots/kbnf_syntax__grammar__test__sub_strings.snap
---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 0)
S ::= #substrs"abc"(ID: 0);
